  galaxies from Pace et al. (2022; 2205.05699). Also add uncertainties
  (#484 by Anya Dovgal). 

- Updated existing and added new phase-space positions for MW globular clusters 
  from Baumgardt et al. (2019; 1811.01507), 
  Vasiliev & Baumgardt (2021; 2102.09568), and 
  Baumgardt & Vasiliev (2021; 2105.09526). Also add uncertainties
  (#485 by Anya Dovgal). 

- Renamed phiforce --> phitorque everywhere (including
  potential.evaluatephiforces and potential.evaluateplanarphiforces), such 
  the method's name actually reflect what it returns (a torque, not a force). 
  phiforce will be fully removed in version 1.9 and may later be re-used 
  for the actual phi component of the force, so switch to the new name now.

- Added code to check whether a newer version of galpy is available and, if so
  encourage users to upgrade (to try to have people use more recent versions).

- Added a 'Try galpy' interactive session on the documentation's home page 
  powered by the new pyodide/emscripten/wasm wheels for galpy.

- Add support to build pyodide/emscripten/wasm wheels for using galpy in the 
  browser at C-ish speeds.

- Fully drop Python 2 support (removed all Python 2 compatibility code).

v1.7.2 (2022-04-15)
===================

- Added NonInertialFrameForce, which provides the fictitious forces 
  when integrating orbits in non-inertial frames. Arbitrary rotations 
  and origin accelerations are supported (#471).

- Added a progress bar when integrating multiple objects in a single 
  orbit instance (requires tqdm) (see #476). 

- Turn on NFWPotential physical output when initializing using the 
  virial mass mvir (see #465)

- Added TimeDependentAmplitudeWrapperPotential, a wrapper allowing
  for arbitrary time dependence of the amplitude of any potential.

- Added NullPotential, a potential with a constant value.

- Added Potential methods/functions rE and LcE to compute the radius
  and angular momentum of an orbit with energy E. Also added these 